--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -382,3 +382,123 @@ pre li {
         margin-bottom: 0;
     }
 }
+
+
+.has-read-more {
+    position: relative;
+    margin-bottom: 3rem;
+
+    .toggle-link {
+        position: absolute;
+        bottom: -1rem;
+        cursor: pointer;
+    }
+}
+
+.topic-narrative {
+    .toggle-link { 
+        &:after {
+            position: absolute;
+            display: block;
+            content: "Read More";
+            background: #FFF;
+            white-space: nowrap;
+            font-weight: bold;
+            font-size: 0.875rem;
+            color: #2b5580;
+        }
+
+        + .content p {
+            display: none;
+        }
+
+        + .content p:first-child {
+            display: block;
+        }
+
+        + .content p:nth-child(2) {
+            display: block;
+        }
+    }
+
+    .toggle-link:checked {
+        + .content p {
+            display: block;
+        }
+
+        &:after {
+            content: "Read Less";
+        }
+    }
+}
+
+.subtopic-narrative {
+    .toggle-link {      
+        &:after {
+            position: absolute;
+            display: block;
+            content: "Read More";
+            background: #FFF;
+            white-space: nowrap;
+            font-weight: bold;
+            font-size: 0.875rem;
+            color: #2b5580;
+        }
+
+        + .content p {
+            display: none;
+        }
+
+        + .content p:first-child {
+            display: block;
+        }
+
+        + .content p:nth-child(2) {
+            display: block;
+        }
+    }
+
+    .toggle-link:checked {
+        + .content p {
+            display: block;
+        }
+
+        &:after {
+            content: "Read Less";
+        }
+    }
+}
+
+
+.project-narrative {
+    .toggle-link { 
+        &:after {
+            position: absolute;
+            display: block;
+            content: "Read More";
+            background: #FFF;
+            white-space: nowrap;
+            font-weight: bold;
+            font-size: 0.875rem;
+            color: #2b5580;
+        }
+
+        + .content p {
+            display: none;
+        }
+
+        + .content p:first-child {
+            display: block;
+        }
+    }
+
+    .toggle-link:checked {
+        + .content p {
+            display: block;
+        }
+
+        &:after {
+            content: "Read Less";
+        }
+    }
+}
