--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -19,7 +19,9 @@
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
         
-            <section ng-bind-html="subtopic.description">
+            <section class="has-read-more subtopic-narrative">
+                <input class="toggle-link" type="checkbox"/>
+                <div class="content" ng-bind-html="subtopic.description"></div>
             </section>
 
             <section>
