--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container topic-narrative">
 
     <div class="breadcrumbs">
         <a ui-sref="projects">MEM</a>
@@ -17,7 +17,10 @@
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
         
-            <section ng-bind-html="topic.description"></section>
+            <section class="has-read-more">
+                <input class="toggle-link" type="checkbox"/>
+                <div class="content" ng-bind-html="topic.description"></div>
+            </section>
 
             <section>
                 <h2>Environment Conditions</h2>
