--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -14,9 +14,12 @@
     </div>
     <div class="row">
         <main class="col-sm-12 col-md-8">
-            <section class="page-narrative">
-                <p>{{project.ceDetails.description}} <a class="read-more-link" href="javascript:void();">Read More »</a></p>
+
+             <section class="has-read-more ce-narrative">
+                <input class="toggle-link" type="checkbox"/>
+                <div class="content" ng-bind-html="project.ceDetails.description"></div>
             </section>
+
             <section>
                 <h2>Compliance Oversight</h2>
                 <ul class="ce-blocks block-container clearfix">
