Committing initial bind for permits in condition.html

--- a/modules/prototype/client/views/condition.html
+++ b/modules/prototype/client/views/condition.html
@@ -71,6 +71,22 @@
                 </ul>
             </div>
             </section>
+            <section class="card">
+                <h2 class="card-title">Related Documents</h2>
+                <div class="resource-list resource-list-sm list-group">
+                    <a class="list-group-item list-group-item-action" href="#">
+                        <span class="avatar">
+                            <i class="material-icons md-18">insert_drive_file</i>
+                        </span>
+                        <span class="title">
+                            <span class="primary">{{condition.permitId}}</span>
+                        </span>
+                        <span class="actions">
+                            <i class="material-icons md-18">file_download</i>
+                        </span>
+                    </a>
+                </div>
+            </section>
         </aside>
     </div>
 </div>
