--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -540,3 +540,51 @@ pre li {
         }
     }
 }
+
+
+.ce-grid {
+    th.sortable .sort-indicator {
+        padding-right: 18px;
+        position: relative;
+    }
+
+    th.sortable.sort-asc, 
+    th.sortable.sort-desc {
+        text-shadow: 0 1px 1px hsla(0,0%,100%,.75);
+    }
+
+    th.sortable.sort-asc, 
+    th.sortable.sort-desc {
+        text-shadow: 0 1px 1px hsla(0,0%,100%,.75);
+    }
+
+    th.sortable .sort-indicator:before {
+        margin-top: 2px;
+        border-bottom: none;
+        border-left: 4px solid transparent;
+        border-right: 4px solid transparent;
+        border-top: 4px solid #000;
+    }
+
+    th.sortable.sort-desc .sort-indicator:after {
+        border-bottom: none;
+        border-left: 4px solid transparent;
+        border-right: 4px solid transparent;
+        border-top: 4px solid #000;
+        box-shadow: none;
+    }
+
+    th.sortable .sort-indicator:after, 
+    .ng-table th.sortable .sort-indicator:before {
+        content: "";
+        border-width: 0 4px 4px;
+        border-style: solid;
+        border-color: #000 transparent;
+        visibility: visible;
+        right: 5px;
+        top: 50%;
+        position: absolute;
+        opacity: .3;
+        margin-top: -4px;
+    }
+}
