--- a/modules/prototype/client/styles/prototype.css
+++ b/modules/prototype/client/styles/prototype.css
@@ -502,6 +502,40 @@ pre li {
 .ce-narrative .toggle-link:checked:after {
   content: "Read Less"; }
 
+.ce-grid th.sortable .sort-indicator {
+  padding-right: 18px;
+  position: relative; }
+.ce-grid th.sortable.sort-asc,
+.ce-grid th.sortable.sort-desc {
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); }
+.ce-grid th.sortable.sort-asc,
+.ce-grid th.sortable.sort-desc {
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); }
+.ce-grid th.sortable .sort-indicator:before {
+  margin-top: 2px;
+  border-bottom: none;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid #000; }
+.ce-grid th.sortable.sort-desc .sort-indicator:after {
+  border-bottom: none;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid #000;
+  box-shadow: none; }
+.ce-grid th.sortable .sort-indicator:after,
+.ce-grid .ng-table th.sortable .sort-indicator:before {
+  content: "";
+  border-width: 0 4px 4px;
+  border-style: solid;
+  border-color: #000 transparent;
+  visibility: visible;
+  right: 5px;
+  top: 50%;
+  position: absolute;
+  opacity: .3;
+  margin-top: -4px; }
+
 /* COMPONENTS */
 .action-summary p {
   margin-bottom: 1.675rem;
