--- a/modules/prototype/client/views/condition.html
+++ b/modules/prototype/client/views/condition.html
@@ -74,12 +74,12 @@
             <section class="card">
                 <h2 class="card-title">Related Documents</h2>
                 <div class="resource-list resource-list-sm list-group">
-                    <a class="list-group-item list-group-item-action" href="#">
+                    <a class="list-group-item list-group-item-action" href="https://mines.empr.gov.bc.ca/api/document/5822594b6d6ad30017cd6b81/fetch">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">{{condition.permitId}}</span>
+                            <span class="primary">Mines Act Permit M-236 - Approval to Operate Tailings Storage Facility</span>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
