Prototype Development - Label for paging counts for the following pages ce-inspection.html, ce-main.html, conditions-main.html

--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -75,6 +75,7 @@
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
+                                <label>Show&nbsp;</label>
                                 <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
                             </div>
                         </div>
