--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -57,20 +57,11 @@
             <section>
                 <h2>Inspection Actions</h2>
                 <div class="title-bar">
-                    <!--
-                    <ul>
-                        <li>page = {{tableParamsStats.currentPage}}</li>
-                        <li>of pages = {{tableParamsStats.totalPages}}</li>
-                        <li>from record = {{tableParamsStats.first}}</li>
-                        <li>to record = {{tableParamsStats.last}}</li>
-                        <li>total records = {{tableParamsStats.totalCount}}</li>
-                        <li>filtered records = {{tableParamsStats.filteredCount}}</li>
-                    </ul>
-                    -->
                     <h3>Showing {{tableParamsStats.first}} - {{tableParamsStats.last}} of {{tableParamsStats.totalCount}}</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
+                                <label>Show&nbsp;</label>
                                 <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
                             </div>
                         </div>
@@ -99,7 +90,7 @@
                     </tr>
                     <tr ng-if="!$data || $data.length === 0">
                         <td colspan="2">
-                            No records found.
+                           No Actions.
                         </td>
                     </tr>
                 </table>
