Prototype Development - Adding time stamps to ce-main and project-main (compliance and enforcement)

--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -588,3 +588,10 @@ pre li {
         margin-top: -4px;
     }
 }
+
+section h2 {
+    em {
+        font-weight: normal;
+        font-style: normal;
+    }
+}
