--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -60,7 +60,7 @@
             </section>
 
             <section>
-                <h2>Compliance &amp; Enforcement</h2>
+                <h2>Compliance &amp; Enforcement &nbsp;<em>(Jan 1 &ndash; Sept 30, 2016)</em></h2>
                 <ul class="ce-blocks block-container clearfix">
                     <li>
                         <div class="block">
