--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -21,7 +21,7 @@
             </section>
 
             <section>
-                <h2>Compliance Oversight</h2>
+                <h2>Compliance Oversight &nbsp;<em>(Jan 1 &ndash; Sept 30, 2016)</em></h2>
                 <ul class="ce-blocks block-container clearfix">
                     <li>
                         <div class="block">
