--- a/modules/prototype/client/styles/prototype.css
+++ b/modules/prototype/client/styles/prototype.css
@@ -540,6 +540,39 @@ section h2 em {
   font-weight: normal;
   font-style: normal; }
 
+/* MAP LAYER */
+.map-layer-list {
+  width: 200px; }
+  .map-layer-list li {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+    .map-layer-list li .swatch {
+      -webkit-box-flex: 0 0 auto;
+      -moz-box-flex: 0 0 auto;
+      -webkit-flex: 0 0 auto;
+      -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
+      margin: 0.45rem;
+      margin-right: 0.2rem;
+      width: 0.875rem;
+      height: 0.875rem;
+      background: blue; }
+    .map-layer-list li .layer-name {
+      -webkit-box-flex: 1 1 auto;
+      -moz-box-flex: 1 1 auto;
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      margin: 0.25rem;
+      font-size: 0.875rem;
+      font-weight: bold; }
+
 /* COMPONENTS */
 .action-summary p {
   margin-bottom: 1.675rem;
