Adding legend to map layer on prototype.

--- a/modules/prototype/client/views/map.html
+++ b/modules/prototype/client/views/map.html
@@ -33,5 +33,5 @@
             </ui-gmap-layer>
         </ui-gmap-google-map>
     </div>
-
+    <div id="legend" style="z-index: 0; position: absolute; bottom: 300px; right: 0px;"><h3>Legend</h3></div>
 </div>
