--- a/modules/prototype/client/styles/prototype.css
+++ b/modules/prototype/client/styles/prototype.css
@@ -19,20 +19,6 @@ h2 {
   font-size: 1.375rem;
   font-weight: bold; }
 
-#legend {
-  font-family: Arial, sans-serif;
-  background: #fff;
-  padding: 10px;
-  margin: 10px;
-  border: 3px solid #000;
-}
-#legend h3 {
-  margin-top: 0;
-}
-#legend img {
-  vertical-align: middle;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -555,9 +541,19 @@ section h2 em {
   font-style: normal; }
 
 /* MAP LAYER */
-.map-layer-list {
-  width: 200px; }
-  .map-layer-list li {
+.map-legend {
+  position: absolute;
+  top: 80px;
+  right: 1rem;
+  width: 200px;
+  background: #FFF;
+  box-shadow: 0 0 4px #333; }
+  .map-legend h3 {
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 0.5rem;
+    text-transform: uppercase; }
+  .map-legend .legend-item {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -566,7 +562,7 @@ section h2 em {
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row; }
-    .map-layer-list li .swatch {
+    .map-legend .legend-item .swatch {
       -webkit-box-flex: 0 0 auto;
       -moz-box-flex: 0 0 auto;
       -webkit-flex: 0 0 auto;
@@ -576,7 +572,7 @@ section h2 em {
       margin-right: 0.2rem;
       width: 0.875rem;
       height: 0.875rem; }
-    .map-layer-list li .layer-name {
+    .map-legend .legend-item .layer-name {
       -webkit-box-flex: 1 1 auto;
       -moz-box-flex: 1 1 auto;
       -webkit-flex: 1 1 auto;
