Removed the news and announcements column

--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -24,7 +24,7 @@
 	<!-- END: MEM DESCRIPTION PANEL -->
 
 	<div class="row">
-		<div></div>
+		<!-- 
 		<div class="col-sm-4 col-md-4 col-lg-3">
 			<div class="news-feed panel panel-default" ng-init="form.expandnews = false">
 				<div class="panel-heading"><h2>News & Announcements</h2></div>
@@ -36,8 +36,9 @@
 				</div>
 			</div>
 		</div>
+		-->
 
-		<div class="col-sm-8 col-md-8 col-lg-9">
+		<div class="col-sm-12">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h2>Environmental Assessments</h2>
