PROTOTYPE: add actions tab/table to ce-main.

--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -73,7 +73,7 @@
                             </tr>
                             <tr ng-if="!$data || $data.length === 0">
                                 <td colspan="2">
-                                    No records found.
+                                    No Conditions.
                                 </td>
                             </tr>
                         </table>
@@ -115,7 +115,7 @@
                             </tr>
                             <tr ng-if="!$data || $data.length === 0">
                                 <td colspan="3">
-                                    No records found.
+                                    No Inspections.
                                 </td>
                             </tr>
                         </table>
@@ -152,7 +152,7 @@
                             </tr>
                             <tr ng-if="!$data || $data.length === 0">
                                 <td colspan="2">
-                                    No records found.
+                                    No Actions.
                                 </td>
                             </tr>
                         </table>
