--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -68,18 +68,18 @@
                     <div class="tab-pane active" id="inspections" role="tabpanel">
                 
                         <div class="title-bar">
-                            <h3>Showing {{tableParamsStats.first}} - {{tableParamsStats.last}} of {{tableParamsStats.totalCount}}</h3>
+                            <h3>Showing {{tableParamsInspectionsStats.first}} - {{tableParamsInspectionsStats.last}} of {{tableParamsInspectionsStats.totalCount}}</h3>
                             <div class="filters">
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <label>Show&nbsp;</label>
-                                        <select class="form-control" class="form-control" ng-model="pageSize" ng-options="size for size in tableParams.settings().counts" ng-change="changePageSize(pageSize)"></select>
+                                        <select class="form-control" class="form-control" ng-model="pageSizeInspections" ng-options="size for size in tableParamsInspections.settings().counts" ng-change="changePageSizeInspections(pageSizeInspections)"></select>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped" show-filter="false">
+                        <table ng-table="tableParamsInspections" class="inspections-grid ce-grid table table-striped" show-filter="false">
                             <tr ng-repeat="inspection in $data">
                                 <td class="id-col"
                                     header-class="'id-col'"
@@ -112,8 +112,39 @@
 
                     <!-- ACTIONS TAB CONTENT -->
                     <div class="tab-pane" id="actions" role="tabpanel">
-                        
-
+                        <div class="title-bar">
+                            <h3>Showing {{tableParamsActionsStats.first}} - {{tableParamsActionsStats.last}} of {{tableParamsActionsStats.totalCount}}</h3>
+                            <div class="filters">
+                                <div class="form-inline">
+                                    <div class="form-group">
+                                        <select class="form-control" class="form-control" ng-model="pageSizeActions" ng-options="size for size in tableParamsActions.settings().counts" ng-change="changePageSizeActions(pageSizeActions)"></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <table ng-table="tableParamsActions" class="actions-grid ce-grid table table-striped" show-filter="false">
+                            <tr ng-repeat="action in $data">
+                                <td class="id-col"
+                                    header-class="'id-col'"
+                                    data-title="'ID'"
+                                    filter="{'orderId':'text'}"
+                                    sortable="'orderId'">
+                                    <a ng-show="action.documentUrl !== ''" ui-sref="admin.prototype.action({orderId: action.orderId})">{{action.type}} Issued: {{action.orderId}}</a>
+                                    <a ng-show="action.documentUrl === ''" disabled ui-sref="#">{{action.type}} Issued: {{action.orderId}}</a>
+                                    <pre class="row-desc" ng-bind-html="action.text"></pre>
+                                </td>
+                                <td class="date-col"
+                                    header-class="'date-col'"
+                                    data-title="'Date'"
+                                    filter="{'issueDate':'text'}"
+                                    sortable="'issueDate'">{{action.issuedDate}}</td>
+                            </tr>
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="2">
+                                    No Actions.
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                     <!-- -->
 
